welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:4: error: identifier expected but '(' found.
def point((c: Color))
          ^MethodsPicture:16: error: ':' expected but '}' found.
}
^